3/1/11 rename equation base classes to support reverse reactions
3/1/11 change request: "H2 + O2 -> H2O" to "H2O -> H2 + O2" (reverse reaction) in first tab
3/1/11 allow equations with 1 reactant in the model, to support reverse reactions
3/1/11 change request: move "Make Ammonia" radio button first in button panel
# 0.00.10 (49356) Mar 1, 2011
3/1/11 add test-game-reward to build file, so that team can experiment with reward parameters
3/1/11 change request: revert to horizontal layout of equation choice radio buttons
3/1/11 change request: change "Make Water" to "Separate Water"
3/1/11 add game reward node, identical to what was done in RPAL, but using atoms, molecules and smiley faces
3/1/11 fix: add game results "popup" to gamePlayParent node, not directly to canvas
3/1/11 fix: hide game results "popup" when game is completed
# 0.00.09 (49327) Feb 28, 2011
2/28/11 dev version that displays bar charts or balances scales in the Game for "unbalanced" answers
2/28/11 change request: use more verbose names for equations in first tab, use vertical layout of radio buttons
2/28/11 remove P4 + 6F2 -> 4PF3 from first tab (dev)
2/28/11 standardize placement of answer, below left box
2/28/11 add "Developer->Show answer" menu item, off by default
2/28/11 account for arrow head offset in layout of bars in chart, so that bar doesn't move around horizontally
2/28/11 make GameResultNode use Function1 for creating content below face node
2/28/11 make NotBalancedNode immutable, create popups as needed
2/28/11 first pass at showing bar charts or balanace scales in "not balanced" popup
2/28/11 randomly choose bar charts or balance scales for each Game problem
2/28/11 make "not balanced" result aware of the current equation
2/28/11 move GameResultNode inner subclasses to their own files
2/28/11 replace duplicate alignment code in GameCanvas with PNodeLayoutUtils.alignInside
2/28/11 adjust layout when "Not Balanaced" popup bounds changes